--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,24 +1,59 @@
-node('built-in')
+@Library('mylibrary')_
+pipeline
 {
-    stage('ContinuousDownload')
+    agent any
+    stages
     {
-        git 'https://github.com/jayadeep3/mymaven.git'
-    }
-    stage('ContinuousBuild')
-    {
-        sh 'mvn package'
-    }
-    stage('ContinuousDeployment')
-    {
-        deploy adapters: [tomcat9(credentialsId: 'd3483286-f61b-4e58-94e7-56cd7810d401', path: '', url: 'http://172.31.13.173:8080')], contextPath: 'testapp', onFailure: false, war: '**/*.war'
-    }
-    stage('ContinuousTesting')
-    {
-        git 'https://github.com/intelliqittrainings/FunctionalTesting.git'
-        sh 'java -jar /home/ubuntu/.jenkins/workspace/ScriptedPipeline1/testing.jar'
-    }
-    stage('ContinuousDelivery')
-    {
-        deploy adapters: [tomcat9(credentialsId: 'd3483286-f61b-4e58-94e7-56cd7810d401', path: '', url: 'http://172.31.3.39:8080')], contextPath: 'prodapp', onFailure: false, war: '**/*.war'
+        stage('ContinuousDownload_master')
+        {
+            steps
+            {
+                script
+                {
+                    cicd.newGit("https://github.com/jayadeep3/mymaven.git")
+                }
+            }
+        }
+        stage('ContinuousBuild_master')
+        {
+            steps
+            {
+                script
+                {
+                    cicd.newMaven()
+                }
+            }
+        }
+        stage('ContinuousDeployment_master')
+        {
+            steps
+            {
+                script
+                {
+                    cicd.newDeploy("SharedLibrarywithDeclarativePipeline","172.31.13.173","testapp")
+                }
+            }
+        }
+        stage('ContinuousTesting_master')
+        {
+            steps
+            {
+                script
+                {
+                    cicd.newGit("https://github.com/intelliqittrainings/FunctionalTesting.git")
+                    cicd.newSelenium("SharedLibrarywithDeclarativePipeline")
+                }
+            }
+        }
+        stage('ContinuousDelivery_master')
+        {
+            steps
+            {
+                script
+                {
+                    cicd.newDeploy("SharedLibrarywithDeclarativePipeline","172.31.3.39","prodapp")
+                }
+            }
+        }
     }
 }
