--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline
     agent any
     stages
     {
-        stage('ContinuousDownload_master')
+        stage('ContinuousDownload_Loans')
         {
             steps
             {
@@ -14,44 +14,13 @@ pipeline
                 }
             }
         }
-        stage('ContinuousBuild_master')
+        stage('ContinuousBuild_Loans')
         {
             steps
             {
                 script
                 {
                     cicd.newMaven()
-                }
-            }
-        }
-        stage('ContinuousDeployment_master')
-        {
-            steps
-            {
-                script
-                {
-                    cicd.newDeploy("SharedLibrarywithDeclarativePipeline","172.31.13.173","testapp")
-                }
-            }
-        }
-        stage('ContinuousTesting_master')
-        {
-            steps
-            {
-                script
-                {
-                    cicd.newGit("https://github.com/intelliqittrainings/FunctionalTesting.git")
-                    cicd.newSelenium("SharedLibrarywithDeclarativePipeline")
-                }
-            }
-        }
-        stage('ContinuousDelivery_master')
-        {
-            steps
-            {
-                script
-                {
-                    cicd.newDeploy("SharedLibrarywithDeclarativePipeline","172.31.3.39","prodapp")
                 }
             }
         }
